RT#112: preventing horizontal overflowing in Firefox3.  Cause of overflow not ascertained.
darcs-hash:20071202072133-8cc29-1e53e99c5debfa6aec7f9f1bca407837f0b45e38.gz

--- a/chrome/content/app/style/chat.css
+++ b/chrome/content/app/style/chat.css
@@ -25,6 +25,7 @@ body {
     background: white;
     font-family: Verdana, sans-serif;
     font-size: 75%;
+    overflow: hidden;
 }
 
 a {
